@@ -1,7 +1,9 @@
 2012-09-19  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* generic/tcl.h: make Tcl_Interp a fully opaque structure
+	* generic/tcl.h:  make Tcl_Interp a fully opaque structure
 	if TCL_NO_DEPRECATED is set (TIP 330 and 336).
+	* win/nmakehlp.c: Let "nmakehlp -V" start searching digits
+	after the found match (suggested by Harald Oehlmann)
 
 2012-09-07  Harald Oehlmann  <oehhar@users.sf.net>
 
